name:                cached-traversable
version:             0.1.0.0
synopsis:            Transparent, persistent caching of lazy, traversable structures
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
copyright:           2014 Thomas Tuegel
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    Data.Traversable.Cached
  build-depends:
    base >=4.6,
    mtl >=2.1,
    binary >=0.5,
    bytestring >=0.10,
    directory >=1.2,
    filepath >=1.3
  hs-source-dirs: src